# credit-card-fraud-detection

./: .gitignore  .pre-commit-config.yaml  README.md  credit-card-fraud-detection.md  main.py  pyproject.toml
notebooks/: 01_eda.ipynb  02_ml_baselines.ipynb  03_deep_learning.ipynb
project_utils/: autosave_plots.py  plotting.py
results/ml_baselines/: test_scores.csv  validation_scores.csv
