[project]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "Credit Card Fraud Detection ML pipeline and experiments."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Aditya Salapaka" }]
license = { text = "MIT" }
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.9",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "mypy>=1.18.2",
    "nbqa>=1.9.1",
    "nbstripout>=0.8.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "xgboost>=3.1.1",
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["sklearn", "sklearn.*"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["project_utils", "project_utils.*"]
ignore_missing_imports = true